--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
         imgContainer.css({
           "width": `${newImgContainerWidth}px`,
           "height": `${newImgContainerHeight}px`,
-          "top": `-${(newImgContainerHeight-imgWindowHeight)/2}px`,
-          "left": `-${(newImgContainerWidth-imgWindowWidth)/2}px`,
+          // "top": `-${(newImgContainerHeight-imgWindowHeight)/2}px`,
+          // "left": `-${(newImgContainerWidth-imgWindowWidth)/2}px`,
         })
       }
       function move(event) {
@@ -200,7 +200,7 @@
         if (quadrant ==3){
           console.log("quadrant 3")
           imgContainer.css({
-            "top": `-${0}px`,
+            "bottom": `-${0}px`,
             "left": `+${0}px`,
           })  
         }  
@@ -215,7 +215,7 @@
           console.log("quadrant 1")
           imgContainer.css({
             "top": `+${0}px`,
-            "right": '-200px',
+            "right": `-${0}px`,
           })
         }
 
