Fixes zoom animation for buttons

--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
         imgContainer.animate({
           "width": `${newImgContainerWidth}px`,
           "height": `${newImgContainerHeight}px`,
-          // "top": `-${(newImgContainerHeight-imgWindowHeight)/2}px`,
-          // "left": `-${(newImgContainerWidth-imgWindowWidth)/2}px`,
+          "top": `-${(newImgContainerHeight-imgWindowHeight)/2}px`,
+          "left": `-${(newImgContainerWidth-imgWindowWidth)/2}px`,
         }, 500)
       }
       function move(event) {
