--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
         <div id="img-preview-container">
           <img id="img-preview-1" src="images/large/shirt.jpg">
           <img id="img-preview-2" src="images/large/red-shirt.jpg">
+          <img id="img-preview-3" src="images/large/blue-shirt.jpg">
          </div>
       </div>
   </div>
@@ -123,18 +124,34 @@
 
       const imgPreview1 = $("#img-preview-1")
       const imgPreview2 = $("#img-preview-2")
+      const imgPreview3 = $("#img-preview-3")
       imgPreview1.addClass("black-border")
 
       imgPreview1.on("click", function() {
         imgPreview1.addClass("black-border")
         imgPreview2.removeClass("black-border")
+        imgPreview3.removeClass("black-border")
         imgContainer.attr("src", "images/large/shirt.jpg")
+        // zoomFactor = 1;
+        // zoom();
       })
 
       imgPreview2.on("click", function() {
         imgPreview2.addClass("black-border")
         imgPreview1.removeClass("black-border")
+        imgPreview3.removeClass("black-border")
         imgContainer.attr("src", "images/large/red-shirt.jpg")
+        // zoomFactor = 1;
+        // zoom();
+      })
+
+      imgPreview3.on("click", function() {
+        imgPreview3.addClass("black-border")
+        imgPreview1.removeClass("black-border")
+        imgPreview2.removeClass("black-border")
+        imgContainer.attr("src", "images/large/blue-shirt.jpg")
+        // zoomFactor = 1;
+        // zoom(); 
       })
 
       function zoom() {
